--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,91 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #222831;
+  padding: 8px 16px;
+}
+.logo {
+  font-size: 1.4em;
+  font-weight: 600;
+  text-decoration: none;
+  color: #213970;
+}
+.navigation a {
+  color: #ffff;
+  text-decoration: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 1.1em;
+  font-weight: 500;
+  border-bottom: solid 2px transparent;
+}
+.navigation a:hover {
+  color: #064663;
+  border-bottom: solid 2px #064663;
+}
+body {
+  height: 100%;
+  width: 100%;
+}
+.hero {
+  height: 100vh;
+  width: 100%;
+  background-image: url(../images/fouchi.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: #041c32;
+  transition: 5s;
+
+  animation-name: animate;
+  animation-direction: alternate-reverse;
+  animation-duration: 30s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  animation-timing-function: ease-in-out;
+}
+@keyframes animate {
+  0% {
+    background: url(../images/lbkhour2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  20% {
+    background: url(../images/lbkour.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  40% {
+    background: url(../images/richat.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  60% {
+    background: url(../images/tirjit.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  80% {
+    background: url(../images/tirjit2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  100% {
+    background: url(../images/fouchi.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
 }
