--- a/css/styles.css
+++ b/css/styles.css
@@ -32,17 +32,18 @@ header {
 body {
   height: 100%;
   width: 100%;
-}
+} 
+/* 
 .hero {
   height: 100vh;
   width: 100%;
-  background-image: url(../images/fouchi.jpg);
+  background-image: url(../images/bg2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-color: #041c32;
   transition: 5s;
-
+    
   animation-name: animate;
   animation-direction: alternate-reverse;
   animation-duration: 30s;
@@ -53,25 +54,25 @@ body {
 }
 @keyframes animate {
   0% {
-    background: url(../images/lbkhour2.jpg);
+    background: url(../images/lbkhour3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
   20% {
-    background: url(../images/lbkour.jpg);
+    background: url(../images/bg4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
   40% {
-    background: url(../images/richat.jpg);
+    background: url(../images/bg7.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
   60% {
-    background: url(../images/tirjit.jpg);
+    background: url(../images/bg3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -83,9 +84,9 @@ body {
     background-position: center;
   }
   100% {
-    background: url(../images/fouchi.jpg);
+    background: url(../images/bg2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-  }
+   } */
 }
