--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ header {
 body {
   height: 100%;
   width: 100%;
-} 
+}
 /* 
 .hero {
   height: 100vh;
@@ -88,5 +88,31 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-   } */
+   } 
+ } */
+section {
+  padding: 200px;
+  background-color: #064663;
+}
+.container h2 {
+  font-size: 4em;
+  font-weight: 700;
+  text-transform: capitalize;
+  padding-bottom: 10px;
+}
+.container a {
+  text-decoration: none;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 1.6em;
+  font-weight: 600;
+  border-radius: 15px;
+  background-color: #222831;
+  padding: 10px 40px;
+  display: inline-block;
+  margin-top: 30px;
+  transition: 0.7s ease;
+}
+.container a:hover {
+  transform: scale(1.1);
 }
