--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ body {
 }
 section {
   padding: 100px;
-  background-color: #064663;
+  background-color: #222831;
   position: relative;
 }
 .container h2 {
@@ -132,12 +132,19 @@ section {
   justify-content: center;
 }
 table {
-  width: 400px;
+  width: 100%;
 }
 table,
 tr,
 td {
   border: 1px solid black;
-  padding: 10px;
+  padding: 20px;
   border-collapse: collapse;
+}
+.content {
+  border: 1px solid black;
+}
+.facts {
+  border: 1px solid black;
+  padding: 30px;
 }
