--- a/css/styles.css
+++ b/css/styles.css
@@ -148,3 +148,14 @@ td {
   border: 1px solid black;
   padding: 30px;
 }
+.card {
+  background-color: #041c32;
+  width: 150px;
+  padding-left: 25px;
+  padding-top: 25px;
+  padding-right: 25px;
+  padding-bottom: 10px;
+}
+.flag img {
+  width: 100px;
+}
