--- a/css/styles.css
+++ b/css/styles.css
@@ -187,3 +187,19 @@ audio {
 .language {
   margin-bottom: 20px;
 }
+.facts-stats a {
+  text-decoration: none;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 1.6em;
+  font-weight: 600;
+  border-radius: 15px;
+  background-color: #213970;
+  padding: 10px 40px;
+  display: inline-block;
+  margin-top: 30px;
+  transition: 0.7s ease;
+}
+.culture {
+  background-color: #213970;
+}
