--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,8 @@ header {
   border-bottom: solid 2px transparent;
 }
 .navigation a:hover {
-  background-color: #064663;
+  color: #064663;
+  border-bottom: solid 2px #064663;                                                                                                                                         z
 }
 body {
   height: 100%;
