--- a/css/styles.css
+++ b/css/styles.css
@@ -212,3 +212,9 @@ audio {
 .culture {
   background-color: #213970;
 }
+.info{
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
