--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ section {
 .culture {
   display: flex;
   justify-content: center;
+  padding: 20px 0;
 }
 table {
   width: 100%;
@@ -209,9 +210,6 @@ audio {
   display: inline-block;
   margin-top: 30px;
   transition: 0.7s ease;
-}
-.culture {
-  background-color: #213970;
 }
 .info{
   padding-left: 20px;
