--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,8 @@ section {
   font-size: 1.6em;
   font-weight: 600;
   border-radius: 15px;
-  background: linear-gradient(45deg, #fd267a, #ff6036);
+  /* background: linear-gradient(45deg, #fd267a, #ff6036); */
+  background-color: #04293a;
   padding: 10px 40px;
   display: inline-block;
   margin-top: 30px;
@@ -236,9 +237,9 @@ audio {
 .img-btn a{
   border: solid 1px transparent;
   text-decoration: none;
-  color: #000;
+  color: #fff;
   border-radius: 15px;
-  background-color: #f2cc6e;
+  background-color:#046582;
   padding: 10px 10px;
   text-align: center;
   margin-left: 10px;
@@ -292,5 +293,5 @@ audio {
 .gallery-section .img img{
   width: 100%;
   height: 100%;
-  margin: 5px;
+  margin: 10px;
 }
