--- a/css/styles.css
+++ b/css/styles.css
@@ -295,3 +295,53 @@ audio {
   height: 100%;
   margin: 10px;
 }
+/* quizes page */
+
+.quizes{
+  padding: 10px ;
+  background-color: #04293a;
+  width: 100%;
+  height: 100vh;
+
+}
+.quize-content{
+  text-align: center;
+  padding: 20px;
+}
+.title{
+  font-size: 1.4em;
+  font-weight: 600;
+  margin: 20px 0;
+}
+.quize{
+  border-radius: 15px;
+  width:41.2em;
+  height: 300px;
+  margin: 0 auto;
+  background-color: #fff;
+  position: relative;
+}
+.Q{
+  margin-left: -300px;
+  padding: 15px 0;
+
+}
+.Q1{
+  position: absolute;
+  left: 10px;
+}
+.Q2{
+  position: absolute;
+  left: 10px;
+  bottom: 150px;
+}
+.Q3{
+  position: absolute;
+  right: 10px;
+}
+.Q4{
+  position: absolute;
+  right: 10px;
+  bottom: 150px;
+}
+
