--- a/css/styles.css
+++ b/css/styles.css
@@ -299,14 +299,15 @@ audio {
 
 .quizes{
   padding: 10px ;
-  background-color: #04293a;
+   background-color: #04293a;
   width: 100%;
   height: 100vh;
+  background: url(../images/Ah\ autumn...\ 🍁.jpg);
 
 }
 .quize-content{
   text-align: center;
-  padding: 20px;
+  padding: 100px;
 }
 .title{
   font-size: 1.4em;
@@ -315,10 +316,12 @@ audio {
 }
 .quize{
   border-radius: 15px;
+  border: solid 2px #046582;
+  box-shadow: 10px 10px 25px rgba(0,0,0, 0.19);
   width:41.2em;
   height: 300px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #f1f1f1;
   position: relative;
 }
 .Q{
@@ -329,6 +332,7 @@ audio {
 .Q1{
   position: absolute;
   left: 10px;
+  color: #333;
 }
 .Q2{
   position: absolute;
@@ -343,5 +347,20 @@ audio {
   position: absolute;
   right: 10px;
   bottom: 150px;
+}
+.quizes-btn{
+  margin-top: 30px;
+  margin-left: 300px;
+}
+.next-btn a{
+      font-size: 1.5em;
+      font-weight: 700;
+      text-decoration: none;
+      text-transform: capitalize;
+      border-radius: 15px;
+      background-color: #054b61;
+      padding: 10px 50px;
+      color: #fff;
+      margin-left: 180px;
 }
 
